--- a/templates/inspection/index.html
+++ b/templates/inspection/index.html
@@ -1,3 +1,7 @@
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript jquery=1 %}#}
+
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -6,28 +10,22 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
+            <p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
 
-<div class="panel panel-default">
-    <div class="modal-body">
-
-<p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
-
-<ul>
-{%  for each_part in active_parts %}
-    <li><a href="/inspection/{{ each_part.jobNumber }}">{{ each_part.machNo }} - {{ each_part.itemDesc }}</a></li>
-{% endfor %}
-</ul>
-
+            <ul>
+                {% for each_part in active_parts %}
+                    <li><a href="/inspection/{{ each_part.jobNumber }}">{{ each_part.machNo }}
+                        - {{ each_part.itemDesc }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </div>
-
-
-
 
 
 </body>
