--- a/templates/phl/index.html
+++ b/templates/phl/index.html
@@ -11,14 +11,22 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-<p>Welcome to the Production History Log Page!</p>
 
-<ul>
-    <li><a href="/production_and_mold_history/production">Record production related observation</a></li>
-    <li><a href="/production_and_mold_history/mold">Record toolroom event</a></li>
-    <li><a href="/production_and_mold_history/production_report">View production history log</a></li>
-    <li><a href="/production_and_mold_history/mold_report">View mold history log</a></li>
-</ul>
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
+
+            <p>Welcome to the Production History Log Page!</p>
+
+            <ul>
+                <li><a href="/production_and_mold_history/production">Record production related observation</a></li>
+                <li><a href="/production_and_mold_history/mold">Record toolroom event</a></li>
+                <li><a href="/production_and_mold_history/production_report">View production history log</a></li>
+                <li><a href="/production_and_mold_history/mold_report">View mold history log</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
