--- a/templates/phl/phl_index.html
+++ b/templates/phl/phl_index.html
@@ -11,17 +11,24 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-<p>Welcome to the Production History Log Page!</p>
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
+            <p>Welcome to the Production History Log Page!</p>
 
-{% if activeInMattec %}
-    <ul>
-        {% for eachActive in activeInMattec %}
-            <li><a href="/production_and_mold_history/production/{{ eachActive.jobNumber }}">{{ eachActive.machNo }}
-                - {{ eachActive.itemDesc }} </a>
-            </li>
-        {% endfor %}
-    </ul>
-{% endif %}
+            {% if activeInMattec %}
+                <ul>
+                    {% for eachActive in activeInMattec %}
+                        <li>
+                            <a href="/production_and_mold_history/production/{{ eachActive.jobNumber }}">{{ eachActive.machNo }}
+                                - {{ eachActive.itemDesc }} </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+    </div>
+</div>
 
 
 </body>
