--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -12,17 +12,18 @@
 
 {% include "nav/nav.html" %}
 
-{% include "equipment/subTemplates/equipInfo.html" %}
 
-<form method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            {% bootstrap_icon "star" %} Submit
-        </button>
-    {% endbuttons %}
-</form>
+
+<div class="col-sm-10 bootcards-cards">
+    {% include "equipment/subTemplates/equipInfo.html" %}
+
+
+    <div class="panel panel-default bootcards-richtext">
+            {% include "project_form_templates/gen_form.html" %}
+    </div>
+</div>
+
+
 
 
 </body>
