--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -6,20 +6,23 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-<p>Welcome to the CIMC Equipment Page! Click on one of the following equipment types to view more information or record an activity:</p>
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
+            <p>Welcome to the CIMC Equipment Page! Click on one of the following equipment types to view more
+                information or record an activity:</p>
 
-<ul>
-{%  for each_type in equipmentTypes %}
-    <li><a href="/equipment/{{ each_type.equipment_type }}">{{each_type.equipment_type}}</a></li>
-{% endfor %}
-</ul>
+            <ul>
+                {% for each_type in equipmentTypes %}
+                    <li><a href="/equipment/{{ each_type.equipment_type }}">{{ each_type.equipment_type }}</a></li>
+                {% endfor %}
+            </ul>
 
-
+        </div>
+    </div>
+</div>
 
 
 </body>
