--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -6,18 +6,24 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript jquery=1 %}#}
 {% include "nav/nav.html" %}
 
-{% include "inspection/subTemplates/subJobInfo.html" %}
 
-{% include "inspection/subTemplates/subSummary.html" %}
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
 
-{% include "inspection/subTemplates/subPartweight.html" %}
+        {% include "inspection/subTemplates/subJobInfo.html" %}
 
-{% include "inspection/subTemplates/subVisualInspection.html" %}
+        {% include "inspection/subTemplates/subSummary.html" %}
+
+        {% include "inspection/subTemplates/subPartweight.html" %}
+
+        {% include "inspection/subTemplates/subVisualInspection.html" %}
+    </div>
+</div>
 
 </body>
 </html>
