--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -6,41 +6,41 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
 
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        {% for key,value in partDict.items %}
 
-{% for key,value in partDict.items %}
+            {% if value.startupInfo %}
+                {% with value.startupInfo as active_job %}
+                    {% include "inspection/subTemplates/subJobInfo.html" %}
+                {% endwith %}
+            {% endif %}
 
-    {% if value.startupInfo %}
-        {% with value.startupInfo as active_job %}
-            {% include "inspection/subTemplates/subJobInfo.html" %}
-        {% endwith %}
-    {% endif %}
-
-    {% if value.visualInspectionDict %}
-        {% with value.visualInspectionDict as visualInspectionDict %}
-            {% include "inspection/subTemplates/subSummary.html" %}
-        {% endwith %}
-    {% endif %}
+            {% if value.visualInspectionDict %}
+                {% with value.visualInspectionDict as visualInspectionDict %}
+                    {% include "inspection/subTemplates/subSummary.html" %}
+                {% endwith %}
+            {% endif %}
 
 
-    {% if value.partWeightInspectionDict %}
-        {% with value.partWeightInspectionDict as partWeightInspectionDict %}
-            {% include "inspection/subTemplates/subSummary.html" %}
-        {% endwith %}
-    {% endif %}
+            {% if value.partWeightInspectionDict %}
+                {% with value.partWeightInspectionDict as partWeightInspectionDict %}
+                    {% include "inspection/subTemplates/subSummary.html" %}
+                {% endwith %}
+            {% endif %}
 
-    {% if value.shotWeightInspectionDict %}
-        {% with value.shotWeightInspectionDict as shotWeightInspectionDict %}
-            {% include "inspection/subTemplates/subSummary.html" %}
-        {% endwith %}
-    {% endif %}
+            {% if value.shotWeightInspectionDict %}
+                {% with value.shotWeightInspectionDict as shotWeightInspectionDict %}
+                    {% include "inspection/subTemplates/subSummary.html" %}
+                {% endwith %}
+            {% endif %}
 
-{% endfor %}
+        {% endfor %}
+    </div>
+</div>
 
 
 </body>
