--- a/templates/inspection/searchForms/jobReportSearch.html
+++ b/templates/inspection/searchForms/jobReportSearch.html
@@ -6,23 +6,16 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+
 {% include "nav/nav.html" %}
 
+<div class="col-sm-10 bootcards-cards">
+    <p>Welcome to the CIMC Inspection Page! Type in a job number to generate a report:</p>
+    <div class="panel panel-default bootcards-richtext">
+            {% include "project_form_templates/gen_form.html" %}
+    </div>
+</div>
 
-<p>Welcome to the CIMC Inspection Page! Type in a job number to generate a report:</p>
-
-<form method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            {% bootstrap_icon "star" %} Submit
-        </button>
-    {% endbuttons %}
-</form>
 
 {% include "date_templates/date_range.html" %}
 
