--- a/templates/inspection/subTemplates/subSummary.html
+++ b/templates/inspection/subTemplates/subSummary.html
@@ -1,133 +1,128 @@
-<div class="panel panel-default">
-    <div class="modal-body">
-        {% if InspectionDates %}
-            <table class="table table-hover">
-                <caption style="text-align:center">Date Range Summary</caption>
-                <thead>
-                <tr>
-                    <th>Job Started</th>
-                    <th>Job Ended</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        {{ InspectionDates.dateCreated__min|date:"M d, Y" }}
-                    </td>
-                    <td>
-                        {{ InspectionDates.dateCreated__max|date:"M d, Y" }}
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        {% endif %}
+{% if InspectionDates %}
+    <div class="panel-body">
+        <table class="table table-hover">
+            <caption style="text-align:center">Date Range Summary</caption>
+            <thead>
+            <tr>
+                <th>Job Started</th>
+                <th>Job Ended</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    {{ InspectionDates.dateCreated__min|date:"M d, Y" }}
+                </td>
+                <td>
+                    {{ InspectionDates.dateCreated__max|date:"M d, Y" }}
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</div>
+{% endif %}
 
-<div class="panel panel-default">
-    <div class="modal-body">
-        {% if visualInspectionDict %}
-            <table class="table table-hover">
-                <caption style="text-align:center">Visual Inspection Summary</caption>
-                <thead>
-                <tr>
-                    <th>Total Visual Inspections</th>
-                    <th>Pass</th>
-                    <th>Fail</th>
-                    <th>Pass Percent</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        {{ visualInspectionDict.totalInspections }}
-                    </td>
-                    <td>
-                        {{ visualInspectionDict.numPass }}
-                    </td>
-                    <td>
-                        {{ visualInspectionDict.numFail }}
-                    </td>
-                    <td>
-                        {{ visualInspectionDict.passPerc }} %
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        {% endif %}
+
+{% if visualInspectionDict %}
+    <div class="panel-body">
+        <table class="table table-hover">
+            <caption style="text-align:center">Visual Inspection Summary</caption>
+            <thead>
+            <tr>
+                <th>Total Visual Inspections</th>
+                <th>Pass</th>
+                <th>Fail</th>
+                <th>Pass Percent</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    {{ visualInspectionDict.totalInspections }}
+                </td>
+                <td>
+                    {{ visualInspectionDict.numPass }}
+                </td>
+                <td>
+                    {{ visualInspectionDict.numFail }}
+                </td>
+                <td>
+                    {{ visualInspectionDict.passPerc }} %
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</div>
+{% endif %}
 
 
-<div class="panel panel-default">
-    <div class="modal-body">
-        {% if partWeightInspectionDict %}
-            <table class="table table-hover">
-                <caption style="text-align:center">Part Weight Inspection Summary</caption>
-                <thead>
-                <tr>
-                    <th>Minimum</th>
-                    <th>Average</th>
-                    <th>Standard Deviation</th>
-                    <th>Maximum</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        {{ partWeightInspectionDict.partWeight__min }}
-                    </td>
-                    <td>
-                        {{ partWeightInspectionDict.partWeight__avg }}
-                    </td>
-                    <td>
-                        {{ partWeightInspectionDict.partWeight__stddev }}
-                    </td>
-                    <td>
-                        {{ partWeightInspectionDict.partWeight__max }}
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        {% endif %}
+
+{% if partWeightInspectionDict %}
+    <div class="panel-body">
+        <table class="table table-hover">
+            <caption style="text-align:center">Part Weight Inspection Summary</caption>
+            <thead>
+            <tr>
+                <th>Minimum</th>
+                <th>Average</th>
+                <th>Standard Deviation</th>
+                <th>Maximum</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    {{ partWeightInspectionDict.partWeight__min }}
+                </td>
+                <td>
+                    {{ partWeightInspectionDict.partWeight__avg }}
+                </td>
+                <td>
+                    {{ partWeightInspectionDict.partWeight__stddev }}
+                </td>
+                <td>
+                    {{ partWeightInspectionDict.partWeight__max }}
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</div>
+{% endif %}
 
 
-<div class="panel panel-default">
-    <div class="modal-body">
-        {% if shotWeightInspectionDict %}
-            <table class="table table-hover">
-                <caption style="text-align:center">Shot Weight Inspection Summary</caption>
-                <thead>
-                <tr>
-                    <th>Minimum</th>
-                    <th>Average</th>
-                    <th>Standard Deviation</th>
-                    <th>Maximum</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        {{ shotWeightInspectionDict.shotWeight__min }}
-                    </td>
-                    <td>
-                        {{ shotWeightInspectionDict.shotWeight__avg }}
-                    </td>
-                    <td>
-                        {{ shotWeightInspectionDict.shotWeight__stddev }}
-                    </td>
-                    <td>
-                        {{ shotWeightInspectionDict.shotWeight__max }}
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        {% endif %}
 
+{% if shotWeightInspectionDict %}
+    <div class="panel-body">
+        <table class="table table-hover">
+            <caption style="text-align:center">Shot Weight Inspection Summary</caption>
+            <thead>
+            <tr>
+                <th>Minimum</th>
+                <th>Average</th>
+                <th>Standard Deviation</th>
+                <th>Maximum</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    {{ shotWeightInspectionDict.shotWeight__min }}
+                </td>
+                <td>
+                    {{ shotWeightInspectionDict.shotWeight__avg }}
+                </td>
+                <td>
+                    {{ shotWeightInspectionDict.shotWeight__stddev }}
+                </td>
+                <td>
+                    {{ shotWeightInspectionDict.shotWeight__max }}
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</div>
+{% endif %}
+
 
 
 
