--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -6,23 +6,16 @@
 </head>
 <body>
 
-
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
-
 {% include "nav/nav.html" %}
-<p>Type in a mold number to view a mold history report.</p>
 
-<form method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            {% bootstrap_icon "star" %} Submit
-        </button>
-    {% endbuttons %}
-</form>
+<div class="col-sm-10 bootcards-cards">
+    <p>Type in a mold number to view a mold history report.</p>
+    <div class="panel panel-default bootcards-richtext">
+            {% include "project_form_templates/gen_form.html" %}
+    </div>
+</div>
+
+
 
 
 </body>
