--- a/templates/phl/forms/phlForm.html
+++ b/templates/phl/forms/phlForm.html
@@ -7,22 +7,18 @@
 <body>
 
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
-
 {% include "nav/nav.html" %}
-<p>Record a production related event.</p>
 
-<form method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_form form layout='horizontal' %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            {% bootstrap_icon "star" %} Submit
-        </button>
-    {% endbuttons %}
-</form>
+
+<div class="col-sm-10 bootcards-cards">
+    <p>Record a production related event.</p>
+    <div class="panel panel-default bootcards-richtext">
+            {% include "project_form_templates/gen_form.html" %}
+    </div>
+</div>
+
+
+
 
 
 </body>
