--- a/templates/phl/reports/mhl.html
+++ b/templates/phl/reports/mhl.html
@@ -11,48 +11,55 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-{% include "inspection/subTemplates/subJobInfo.html" %}
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
 
-{% if mold_info %}
-    <table class="table table-hover">
-        <caption style="text-align:center">Mold Information</caption>
-        <tr>
-            <td>Mold Number</td>
-            <td>Mold Description</td>
-            <td>Number of Cavities</td>
-        </tr>
-            <tr>
-                <td> {{ mold_info.mold_number }} </td>
-                <td> {{ mold_info.mold_description }} </td>
-                <td> {{ mold_info.num_cavities }}</td>
-            </tr>
-    </table>
-{% endif %}
 
-{% if MHL %}
-    <table class="table table-hover">
-        <caption style="text-align:center">Mold History Information</caption>
-        <tr>
-            <td>Inspector Name</td>
-            <td>Date Created</td>
-            <td>PM</td>
-            <td>Repair</td>
-            <td>Hours Worked</td>
-            <td>Description of Event</td>
-        </tr>
-        {%  for ep in MHL %}
-            <tr>
-                <td> {{ ep.inspectorName }} </td>
-                <td> {{ ep.dateCreated }} </td>
-                <td> {{ ep.pm }}</td>
-                <td> {{ ep.repair }} </td>
-                <td> {{ ep.hours_worked }} </td>
-                <td> {{ ep.descEvent }} </td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endif %} 
+            {% include "inspection/subTemplates/subJobInfo.html" %}
 
+            {% if mold_info %}
+                <table class="table table-hover">
+                    <caption style="text-align:center">Mold Information</caption>
+                    <tr>
+                        <td>Mold Number</td>
+                        <td>Mold Description</td>
+                        <td>Number of Cavities</td>
+                    </tr>
+                    <tr>
+                        <td> {{ mold_info.mold_number }} </td>
+                        <td> {{ mold_info.mold_description }} </td>
+                        <td> {{ mold_info.num_cavities }}</td>
+                    </tr>
+                </table>
+            {% endif %}
+
+            {% if MHL %}
+                <table class="table table-hover">
+                    <caption style="text-align:center">Mold History Information</caption>
+                    <tr>
+                        <td>Inspector Name</td>
+                        <td>Date Created</td>
+                        <td>PM</td>
+                        <td>Repair</td>
+                        <td>Hours Worked</td>
+                        <td>Description of Event</td>
+                    </tr>
+                    {% for ep in MHL %}
+                        <tr>
+                            <td> {{ ep.inspectorName }} </td>
+                            <td> {{ ep.dateCreated }} </td>
+                            <td> {{ ep.pm }}</td>
+                            <td> {{ ep.repair }} </td>
+                            <td> {{ ep.hours_worked }} </td>
+                            <td> {{ ep.descEvent }} </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+        </div>
+    </div>
+</div>
 
 
 </body>
