--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -11,33 +11,41 @@
 {% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
-{% include "inspection/subTemplates/subJobInfo.html" %}
+
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
 
 
-{% if active_job %}
-    <table class="table table-hover">
-        <caption style="text-align:center">Production History Log</caption>
-        <tr>
-            <td>Inspector Name</td>
-            <td>Date Created</td>
-            <td>Description of Event</td>
-        </tr>
-        {%  for ep in PHL %}
-            <tr>
-                <td>
-                    {{ ep.inspectorName }}
-                </td>
-                <td>
-                    {{ ep.dateCreated }}
-                </td>
-                <td>
-                    {{ ep.descEvent }}
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-{% endif %}
+            {% include "inspection/subTemplates/subJobInfo.html" %}
 
+
+            {% if active_job %}
+                <table class="table table-hover">
+                    <caption style="text-align:center">Production History Log</caption>
+                    <tr>
+                        <td>Inspector Name</td>
+                        <td>Date Created</td>
+                        <td>Description of Event</td>
+                    </tr>
+                    {% for ep in PHL %}
+                        <tr>
+                            <td>
+                                {{ ep.inspectorName }}
+                            </td>
+                            <td>
+                                {{ ep.dateCreated }}
+                            </td>
+                            <td>
+                                {{ ep.descEvent }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+        </div>
+    </div>
+</div>
 
 
 </body>
