--- a/templates/startupshot/startUpShotSearch.html
+++ b/templates/startupshot/startUpShotSearch.html
@@ -8,33 +8,19 @@
 <body>
 
 {% load staticfiles %}
-{#{% load bootstrap3 %}#}
-{#{% bootstrap_css %}#}
-{#{% bootstrap_javascript jquery=1 %}#}
+
 
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-<div class="panel panel-default">
-    <div class="panel-body">
-    <span class="help-block"> Type in a part number to see what has already been created</span>
-
-        <form action="/startupshot/" method="post" class="form-horizontal">
-    {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Submit"/>
-    </form>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {% include "project_form_templates/gen_form.html" %}
+        </div>
     </div>
 </div>
-</div>
+
 
 
 </body>
 </html>
-
-{#    {% bootstrap_form form layout='horizontal' %}#}
-{#    {% buttons %}#}
-{#        <button type="submit" class="btn btn-primary">#}
-{#            {% bootstrap_icon "star" %} Submit#}
-{#        </button>#}
-{#    {% endbuttons %}#}
