--- a/templates/equipment/reports/equipment_pm_report.html
+++ b/templates/equipment/reports/equipment_pm_report.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
 {% include "nav/nav.html" %}
 
+
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
 
 {% include "equipment/subTemplates/equipInfo.html" %}
 
@@ -39,6 +40,8 @@
     </tbody>
 {% endif %}
 
-
+        </div>
+    </div>
+</div>
 </body>
 </html>
