--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -7,16 +7,22 @@
 <body>
 
 {% load mathfilters %}
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery=1 %}
+{#{% load bootstrap3 %}#}
+{#{% bootstrap_css %}#}
+{#{% bootstrap_javascript jquery=1 %}#}
 {% include "nav/nav.html" %}
 
+
+<div class="col-sm-10 bootcards-cards">
+    <div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
 
 {% include "equipment/subTemplates/equipInfo.html" %}
 
 
-{% if repair_info %}
+
+
+            {% if repair_info %}
     <table class="table table-hover">
     <caption style="text-align:center">Repair Information</caption>
     <thead>
@@ -35,20 +41,23 @@
     <tbody>
     {% for each_repair in repair_info %}
         <tr>
-            <td>{{ each_PM.employee }}</td>
-            <td>{{ each_PM.dateCreated }}</td>
-            <td>{{ each_PM.po_num }}</td>
-            <td>{{ each_PM.part_supplier }}</td>
-            <td>{{ each_PM.part_name }}</td>
-            <td>{{ each_PM.part_number }}</td>
-            <td>${{ each_PM.part_cost }}</td>
-            <td>{{ each_PM.part_quantity }}</td>
-            <td>${{ each_PM.part_cos|mul: each_PM.part_quantity }}</td>
+            <td>{{ each_repair.employee }}</td>
+            <td>{{ each_repair.dateCreated }}</td>
+            <td>{{ each_repair.po_num }}</td>
+            <td>{{ each_repair.part_supplier }}</td>
+            <td>{{ each_repair.part_name }}</td>
+            <td>{{ each_repair.part_number }}</td>
+            <td>${{ each_repair.part_cost }}</td>
+            <td>{{ each_repair.part_quantity }}</td>
+            <td>${{ each_repair.part_cost|mul:each_repair.part_quantity }}</td>
         </tr>
     {% endfor %}
     </tbody>
 {% endif %}
 
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
