--- a/templates/inspection/subTemplates/subPartweight.html
+++ b/templates/inspection/subTemplates/subPartweight.html
@@ -1,6 +1,7 @@
 
 
 {% if partWeightInspection %}
+    <div class="panel panel-default">
     <div class="panel-body">
     <table class="table table-hover">
         <caption style="text-align:center">Part Weight Log</caption>
@@ -34,8 +35,8 @@
             </tr>
         {% endfor %}
         </tbody>
-
     </table>
+    </div>
+    </div>
 {% endif %}
-</div>
 
