--- a/templates/inspection/subTemplates/subVisualInspection.html
+++ b/templates/inspection/subTemplates/subVisualInspection.html
@@ -1,4 +1,5 @@
 {% if visualInspection %}
+    <div class="panel panel-default">
     <div class="panel-body">
     <table class="table table-hover">
         <caption style="text-align:center">Visual Inspection Log</caption>
@@ -38,8 +39,9 @@
         {% endfor %}
         </tbody>
     </table>
-{% endif %}
 </div>
+    </div>
+{% endif %}
 
 
 
