--- a/templates/equipment/reports/equipment_pm_report.html
+++ b/templates/equipment/reports/equipment_pm_report.html
@@ -10,38 +10,38 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
-        <div class="panel-body">
-
-{% include "equipment/subTemplates/equipInfo.html" %}
 
 
-{% if PM_info %}
-    <table class="table table-hover">
-    <caption style="text-align:center">Preventative Maintenance Information</caption>
-    <thead>
-    <tr>
-        <td>Mechanic</td>
-        <td>Date</td>
-        <td>PM Frequency</td>
-        <td>Logged PM</td>
-    </tr>
-    </thead>
-    <tbody>
-    {% for each_PM in PM_info %}
-        <tr>
-            <td>{{ each_PM.employee }}</td>
-            <td>{{ each_PM.dateCreated }}</td>
-            <td>{{ each_PM.pm_frequency }}</td>
-            {#            <td>{{ each_PM.logged_pm }}</td>#}
-            <td> {% for pmt in each_PM.logged_pm.all %} <p>{{ pmt.pm_item }}</p> {% endfor %}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-{% endif %}
+    {% include "equipment/subTemplates/equipInfo.html" %}
 
+
+    {% if PM_info %}
+        <div class="panel panel-default bootcards-richtext">
+            <div class="panel-body">
+                <table class="table table-hover">
+                    <caption style="text-align:center">Preventative Maintenance Information</caption>
+                    <thead>
+                    <tr>
+                        <th>Mechanic</th>
+                        <th>Date</th>
+                        <th>PM Frequency</th>
+                        <th>Logged PM</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for each_PM in PM_info %}
+                        <tr>
+                            <td>{{ each_PM.employee }}</td>
+                            <td>{{ each_PM.dateCreated }}</td>
+                            <td>{{ each_PM.pm_frequency }}</td>
+                            <td> {% for pmt in each_PM.logged_pm.all %} <p>{{ pmt.pm_item }}</p> {% endfor %}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+            </div>
         </div>
-    </div>
+    {% endif %}
+
 </div>
 </body>
 </html>
