--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -14,49 +14,43 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
-        <div class="panel-body">
-
-{% include "equipment/subTemplates/equipInfo.html" %}
-
-
-
-
-            {% if repair_info %}
-    <table class="table table-hover">
-    <caption style="text-align:center">Repair Information</caption>
-    <thead>
-    <tr>
-        <td>Mechanic</td>
-        <td>Date</td>
-        <td>PO Number</td>
-        <td>Part Supplier</td>
-        <td>Part Name</td>
-        <td>Part Number</td>
-        <td>Unit Cost</td>
-        <td>Quantity</td>
-        <td>Total Cost</td>
-    </tr>
-    </thead>
-    <tbody>
-    {% for each_repair in repair_info %}
-        <tr>
-            <td>{{ each_repair.employee }}</td>
-            <td>{{ each_repair.dateCreated }}</td>
-            <td>{{ each_repair.po_num }}</td>
-            <td>{{ each_repair.part_supplier }}</td>
-            <td>{{ each_repair.part_name }}</td>
-            <td>{{ each_repair.part_number }}</td>
-            <td>${{ each_repair.part_cost }}</td>
-            <td>{{ each_repair.part_quantity }}</td>
-            <td>${{ each_repair.part_cost|mul:each_repair.part_quantity }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-{% endif %}
-
+    {% include "equipment/subTemplates/equipInfo.html" %}
+    {% if repair_info %}
+        <div class="panel panel-default bootcards-richtext">
+            <div class="panel-body">
+                <table class="table table-hover">
+                    <caption style="text-align:center">Repair Information</caption>
+                    <thead>
+                    <tr>
+                        <th>Mechanic</th>
+                        <th>Date</th>
+                        <th>PO Number</th>
+                        <th>Part Supplier</th>
+                        <th>Part Name</th>
+                        <th>Part Number</th>
+                        <th>Unit Cost</th>
+                        <th>Quantity</th>
+                        <th>Total Cost</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for each_repair in repair_info %}
+                        <tr>
+                            <td>{{ each_repair.employee }}</td>
+                            <td>{{ each_repair.dateCreated }}</td>
+                            <td>{{ each_repair.po_num }}</td>
+                            <td>{{ each_repair.part_supplier }}</td>
+                            <td>{{ each_repair.part_name }}</td>
+                            <td>{{ each_repair.part_number }}</td>
+                            <td>${{ each_repair.part_cost }}</td>
+                            <td>{{ each_repair.part_quantity }}</td>
+                            <td>${{ each_repair.part_cost|mul:each_repair.part_quantity }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+            </div>
         </div>
-    </div>
+    {% endif %}
 </div>
 
 </body>
