--- a/templates/equipment/subTemplates/equipInfo.html
+++ b/templates/equipment/subTemplates/equipInfo.html
@@ -1,4 +1,8 @@
+
+
 {% if equip_info %}
+<div class="panel panel-default bootcards-richtext">
+        <div class="panel-body">
     <table class="table table-hover">
         <caption style="text-align:center">Equipment Information</caption>
         <tr>
@@ -26,4 +30,6 @@
             </td>
         </tr>
     </table>
+    </div>
+    </div>
 {% endif %}
