--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -9,7 +9,8 @@
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-    <p>Type in a mold number to view a mold history report.</p>
+    {% include "phl/subtemplates/moldInfo.html" %}
+
     <div class="panel panel-default bootcards-richtext">
             {% include "project_form_templates/gen_form.html" %}
     </div>
