--- a/templates/phl/forms/phlForm.html
+++ b/templates/phl/forms/phlForm.html
@@ -9,9 +9,13 @@
 
 {% include "nav/nav.html" %}
 
-
 <div class="col-sm-10 bootcards-cards">
+{% include "inspection/subTemplates/subJobInfo.html" %}
+
+
     <p>Record a production related event.</p>
+
+
     <div class="panel panel-default bootcards-richtext">
             {% include "project_form_templates/gen_form.html" %}
     </div>
