--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -13,21 +13,22 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
-        <div class="panel-body">
+    {% include "inspection/subTemplates/subJobInfo.html" %}
 
+    {% if active_job %}
+        <div class="panel panel-default bootcards-richtext">
+            <div class="panel-body">
 
-            {% include "inspection/subTemplates/subJobInfo.html" %}
-
-
-            {% if active_job %}
                 <table class="table table-hover">
                     <caption style="text-align:center">Production History Log</caption>
+                    <thead>
                     <tr>
-                        <td>Inspector Name</td>
-                        <td>Date Created</td>
-                        <td>Description of Event</td>
+                        <th>Inspector Name</th>
+                        <th>Date Created</th>
+                        <th>Description of Event</th>
                     </tr>
+                    </thead>
+                    <tbody>
                     {% for ep in PHL %}
                         <tr>
                             <td>
@@ -41,10 +42,11 @@
                             </td>
                         </tr>
                     {% endfor %}
+                    </tbody>
                 </table>
-            {% endif %}
+            </div>
         </div>
-    </div>
+    {% endif %}
 </div>
 
 
