--- a/templates/phl/index.html
+++ b/templates/phl/index.html
@@ -15,17 +15,40 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default bootcards-richtext">
         <div class="panel-body">
-
             <p>Welcome to the Production History Log Page!</p>
-
-            <ul>
-                <li><a href="/production_and_mold_history/production">Record production related observation</a></li>
-                <li><a href="/production_and_mold_history/mold">Record toolroom event</a></li>
-                <li><a href="/production_and_mold_history/production_report">View production history log</a></li>
-                <li><a href="/production_and_mold_history/mold_report">View mold history log</a></li>
-            </ul>
         </div>
     </div>
+
+
+    <div class="bootcards-list">
+        <div class="panel panel-default">
+            <div class="list-group">
+
+                <a class="list-group-item" href="/production_and_mold_history/production">
+                    <h4 class="list-group-item-heading">Record</h4>
+                    <p class="list-group-item-text">Record production related observation</p>
+                </a>
+
+                <a class="list-group-item" href="/production_and_mold_history/mold">
+                    <h4 class="list-group-item-heading">Record</h4>
+                    <p class="list-group-item-text">Record toolroom event</p>
+                </a>
+
+                <a class="list-group-item" href="/production_and_mold_history/production_report">
+                    <h4 class="list-group-item-heading">Report</h4>
+                    <p class="list-group-item-text">View production history log</p>
+                </a>
+
+                <a class="list-group-item" href="/production_and_mold_history/mold_report">
+                    <h4 class="list-group-item-heading">Report</h4>
+                    <p class="list-group-item-text">View mold history log</p>
+                </a>
+
+            </div>
+        </div>
+    </div>
+
+
 </div>
 
 </body>
