--- a/templates/startupshot/viewActive.html
+++ b/templates/startupshot/viewActive.html
@@ -7,10 +7,6 @@
 <body>
 
 
-{#{% load bootstrap3 %}#}
-{#{% bootstrap_css %}#}
-{#{% bootstrap_javascript jquery=1 %}#}
-
 {% include "nav/nav.html" %}
 
 
@@ -18,15 +14,8 @@
     <div class="panel panel-default bootcards-richtext">
         <div class="panel-body">
             <p>Welcome to the CIMC Startup Shot Page! The following machines are active:</p>
-            {% if activeInMattec %}
-                <ul>
-                    {% for eachActive in activeInMattec %}
-                        <li><a href="/startupshot/create/{{ eachActive.jobNumber }}/">{{ eachActive.machNo }}
-                            - {{ eachActive.itemDesc }} </a></li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
         </div>
     </div>
-</div>
 
+    {% include "startupshot/sub_html/activeMATTEC.html" %}
+</div>
