--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -13,15 +13,25 @@
         <div class="panel-body">
             <p>Welcome to the CIMC Equipment Page! Click on one of the following equipment types to view more
                 information or record an activity:</p>
-
-            <ul>
-                {% for each_type in equipmentTypes %}
-                    <li><a href="/equipment/{{ each_type.equipment_type }}">{{ each_type.equipment_type }}</a></li>
-                {% endfor %}
-            </ul>
-
         </div>
     </div>
+
+{% if equipmentTypes %}
+        <div class="bootcards-list">
+            <div class="panel panel-default">
+                <div class="list-group">
+                    {% for each_type in equipmentTypes %}
+                        <a class="list-group-item" href="/equipment/{{ each_type.equipment_type }}">
+                            <h4 class="list-group-item-heading">{{ each_type.equipment_type }}</h4>
+
+                            <p class="list-group-item-text">Click here to record an activity </p>
+                        </a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 </div>
 
 
