--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -14,30 +14,71 @@
 
     {% include "inspection/subTemplates/subJobInfo.html" %}
 
-    <div class="panel panel-default bootcards-richtext">
-        <div class="panel-body">
-            {% for ep in active_job %}
-                <ul>
-                    <li><a href="/inspection/jobReport/{{ ep.jobNumber }}">Click here to view current job report</a>
-                    </li>
-                    {% if inspectionTypes.visual_inspection %}
-                        <li><a href="/inspection/{{ ep.jobNumber }}/visual">Click here to record visual inspection</a>
-                        </li>
-                    {% endif %}
-                    {% if inspectionTypes.part_weight_inspection %}
-                        <li><a href="/inspection/{{ ep.jobNumber }}/part_weight">Click here to record part weight
-                            inspection</a>
-                        </li>
-                    {% endif %}
-                    {% if inspectionTypes.shot_weight_inspection %}
-                        <li><a href="/inspection/{{ ep.jobNumber }}/shot_weight">Click here to record shot weight
-                            inspection</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            {% endfor %}
+
+{% if active_job %}
+        <div class="bootcards-list">
+            <div class="panel panel-default">
+                <div class="list-group">
+                    {% for ep in active_job %}
+
+                        <a class="list-group-item" href="/inspection/jobReport/{{ ep.jobNumber }}">
+                            <h4 class="list-group-item-heading">Job Report</h4>
+                            <p class="list-group-item-text">Click here to view the current job report</p>
+                        </a>
+
+                        {% if inspectionTypes.visual_inspection %}
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/visual">
+                            <h4 class="list-group-item-heading">Visual Inspection</h4>
+                            <p class="list-group-item-text">Click Here to record a visual inspection </p>
+                            </a>
+                        {% endif %}
+
+                        {% if inspectionTypes.part_weight_inspection %}
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/part_weight">
+                            <h4 class="list-group-item-heading">Part Weight Inspection</h4>
+                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>
+                            </a>
+                        {% endif %}
+
+                        {% if inspectionTypes.shot_weight_inspection %}
+                            <a class="list-group-item" href="/inspection/{{ ep.jobNumber }}/shot_weight">
+                            <h4 class="list-group-item-heading">Shot Weight Inspection</h4>
+                            <p class="list-group-item-text">Click Here to record a part weight inspection </p>
+                            </a>
+                        {% endif %}
+
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-    </div>
+    {% endif %}
+
+
+{##}
+{#    <div class="panel panel-default bootcards-richtext">#}
+{#        <div class="panel-body">#}
+{#            {% for ep in active_job %}#}
+{#                <ul>#}
+{#                    <li><a href="/inspection/jobReport/{{ ep.jobNumber }}">Click here to view current job report</a>#}
+{#                    </li>#}
+{#                    {% if inspectionTypes.visual_inspection %}#}
+{#                        <li><a href="/inspection/{{ ep.jobNumber }}/visual">Click here to record visual inspection</a>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{#                    {% if inspectionTypes.part_weight_inspection %}#}
+{#                        <li><a href="/inspection/{{ ep.jobNumber }}/part_weight">Click here to record part weight#}
+{#                            inspection</a>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{#                    {% if inspectionTypes.shot_weight_inspection %}#}
+{#                        <li><a href="/inspection/{{ ep.jobNumber }}/shot_weight">Click here to record shot weight#}
+{#                            inspection</a>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{#                </ul>#}
+{#            {% endfor %}#}
+{#        </div>#}
+{#    </div>#}
 </div>
 
 
