--- a/templates/equipment/subTemplates/equipInfo.html
+++ b/templates/equipment/subTemplates/equipInfo.html
@@ -5,6 +5,7 @@
         <div class="panel-body">
     <table class="table table-hover">
         <caption style="text-align:center">Equipment Information</caption>
+        <thead>
         <tr>
             <th>Equipment Type</th>
             <th>Name</th>
@@ -12,6 +13,7 @@
             <th>Serial Number</th>
             <th>Date of Manufacture</th>
         </tr>
+        </thead>
         <tr>
             <td>
                 {{ equip_info.equipment_type }}
