--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -16,8 +16,8 @@
         {% include "inspection/subTemplates/subJobInfo.html" %}
         {% include "inspection/subTemplates/subSummary.html" %}
         {% include "inspection/subTemplates/subPartweight.html" %}
+    {% include "inspection/subTemplates/subShotWeight.html" %}
         {% include "inspection/subTemplates/subVisualInspection.html" %}
-
 </div>
 
 </body>
