--- a/templates/inspection/subTemplates/subSummary.html
+++ b/templates/inspection/subTemplates/subSummary.html
@@ -5,8 +5,8 @@
             <caption style="text-align:center">Date Range Summary</caption>
             <thead>
             <tr>
-                <th>Job Started</th>
-                <th>Job Ended</th>
+                <th class="col-sm-2">Job Started</th>
+                <th class="col-sm-2">Job Ended</th>
             </tr>
             </thead>
             <tbody>
