--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -8,9 +8,14 @@
 
 {% include "nav/nav.html" %}
 
-
 <div class="col-sm-10 bootcards-cards">
-        {% for key,value in partDict.items %}
+
+
+    {% for key,value in partDict.items %}
+        {#            <div class="panel panel-default bootcards-summary">#}
+        <div class="panel-heading">
+            <h3 class="panel-title text-center">Summary For Job {{ value.startupInfo.0.jobNumber }}</h3>
+        </div>
 
             {% if value.startupInfo %}
                 {% with value.startupInfo as active_job %}
@@ -37,8 +42,8 @@
                 {% endwith %}
             {% endif %}
 
+        {#            </div>#}
         {% endfor %}
-
 </div>
 
 
